--- a/validation/diffusion_only.ipynb
+++ b/validation/diffusion_only.ipynb
@@ -7,12 +7,13 @@
    "outputs": [],
    "source": [
     "import pybamm\n",
-    "from src import DiffusionOnly, Simulation"
+    "import numpy as np\n",
+    "from src import DiffusionOnly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +55,24 @@
     "    \"Electrolyte thickness [m]\": 0.15,\n",
     "})\n",
     "\n",
-    "sim = pybamm.Simulation(model, parameter_values=parameters, var_pts={model.r_s: 500, model.r_e: 50})\n",
-    "sol = sim.solve([0, 0.0021])"
+    "sim = pybamm.Simulation(model, parameter_values=parameters, var_pts={model.r_s: 100, model.r_e: 100})\n",
+    "sol = sim.solve(np.linspace(0, 2, 1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4fc88b82bb24e2aac5ff4ecf8b9e002",
+       "model_id": "14e03a21bc9a4dce93eb650e22c37172",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.0, description='t', max=0.0021, step=2.1e-05), Output()), _dom_class…"
+       "interactive(children=(FloatSlider(value=0.0, description='t', max=2.0, step=0.02), Output()), _dom_classes=('w…"
       ]
      },
      "metadata": {},
@@ -80,24 +81,39 @@
     {
      "data": {
       "text/plain": [
-       "<pybamm.plotting.quick_plot.QuickPlot at 0x7f770c11caf0>"
+       "<pybamm.plotting.quick_plot.QuickPlot at 0x7f9228938460>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sol.plot([\"Electrode concentration [mol.m-3]\", \"Electrolyte concentration [mol.m-3]\", \"Concentration [mol.m-3]\"])"
+    "sol.plot([\"Electrode concentration [mol.m-3]\", \"Electrolyte concentration [mol.m-3]\", \"Concentration [mol.m-3]\", \"Surface electrode concentration [mol.m-3]\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.26672065e-05, 2.26145963e-05, 2.25627819e-05, 2.25117439e-05,\n",
+       "       2.24614664e-05, 2.24119360e-05, 2.23631407e-05, 2.23150667e-05,\n",
+       "       2.22676432e-05, 2.22208014e-05])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - sol[\"Surface electrode concentration [mol.m-3]\"].entries[-10:]"
+   ]
   }
  ],
  "metadata": {
